<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">发呆小器-I</string>
    <string name="app_version">版本: 0.2.1</string>
    <string name="title_meditation">发呆</string>
    <string name="title_meditation_settings">发呆设置</string>
    <string name="title_meditation_check">发呆回顾</string>
    <string name="title_book">读经</string>
    <string name="title_evolution">演化</string>
    <string name="title_prepare">预备倒计时</string>
    <string name="title_search">搜索</string>
    <string name="title_refresh">刷新</string>
    <string name="title_profile">个人中心</string>
    <string name="title_signup">注册</string>
    <string name="title_signin">登录</string>
    <string name="title_signout">退出登录</string>
    <string name="title_settings">设置</string>
    <string name="title_about">关于...</string>
    <string name="title_exit">退出</string>
    <string name="title_more">更多</string>
    <string name="meditation_headline">冥想是种最好的内开发方法</string>
    <string name="meditation_time_setting">发呆时间设置</string>
    <string name="meditation_time_duration_value_mode">发呆持续时间取值模式</string>
    <string name="meditation_time_duration">发呆持续时间</string>
    <string name="meditation_time_duration_hour">发呆持续时间:小时</string>
    <string name="meditation_time_duration_minute">发呆持续时间:分钟</string>
    <string name="meditation_time_duration_second">发呆持续时间:秒</string>
    <string name="meditation_time_duration_custom">发呆持续时间自定义长度</string>
    <string name="meditation_time_prepare">发呆预备时间</string>
    <string name="meditation_music_setting">发呆音乐设置</string>
    <string name="meditation_music_begin">开始背景音</string>
    <string name="meditation_music_end">结束背景音</string>
    <string name="meditation_music_play_mode">背景音循环模式</string>
    <string name="meditation_music_play_loop">循环播放</string>
    <string name="meditation_music_play_no_loop">不循环播放</string>
    <string name="meditation_music_loop_mode">背景音循环模式</string>
    <string name="meditation_music_loop_mode_label">循环播放</string>
    <string name="meditation_btn_settings">发呆设置</string>
    <string name="meditation_btn_start">开始发呆</string>
    <string name="meditation_btn_stop">停止发呆</string>
    <string name="meditation_btn_check">发呆回顾</string>
    <string name="book_headline">读经使人明智</string>
    <string name="book_btn_catalog">主目录</string>
    <string name="book_btn_bookmark">书签</string>
    <string name="book_btn_comments">读书笔记</string>    
    <string name="book_btn_zen_catalog">禅宗七经</string>
    <string name="book_btn_pure_catalog">净宗五经一论</string>
    <string name="book_btn_all_catalog">其他经书</string>
    <string name="book_btn_textsize_default">默认字号</string>
    <string name="book_btn_textsize_greater">+ 增大字号</string>
    <string name="book_btn_textsize_smaller">- 缩小字号</string>
    <string name="book_btn_prev_screen">上一屏</string>
    <string name="book_btn_next_screen">下一屏</string>
    <string name="book_btn_collapse_all">全收</string>
    <string name="book_btn_expand_all">全展</string>
    <string name="book_volume_head_title">读书-详情内容</string>
    <string name="evolution_headline">时时察看你自己的演化历史</string>
    <string name="evolution_remark">演化历史</string>
    <string name="evolution_btn_plan">演化计划</string>
    <string name="evolution_btn_design">设计执行</string>
    <string name="evolution_btn_check">演化回顾</string>
    <string name="evolution_btn_action">处理</string>
    <string name="evolution_btn_aim">工具箱</string>
    <string name="evolution_aim_sculping">时光刻刀</string>
    <string name="evolution_aim_morning">晨型养成</string>
    <string name="evolution_aim_aura">灵性修养</string>
    <string name="settings_headline">更多</string>
    <string name="lbl_ok">确认</string>
    <string name="lbl_cancel">取消</string>
    <string name="lbl_exit_confirm_info">确认退出吗?</string>
    <string name="lbl_meditation_plantime">计划发呆:</string>
    <string name="lbl_meditation_infinite">持续</string>
    <string name="lbl_begin_in">开始时间:</string>
    <string name="lbl_end_in">结束时间:</string>
    <string name="lbl_minute">分钟</string>
    <string name="txt_about_author">发布人: 后崖</string>
    <string name="txt_about_pubdate">发布时间:2014-08</string>
    <string name="txt_about_email">电子邮箱: onc4hy@126.com</string>
    <string name="txt_about_source">源代码访问地址: https://github.com/onc4hy/back-evolution.git</string>
    <string name="txt_about_body">v 0.1.1\nauthor:onc4hy</string>
    
</resources>