<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/title_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="always|collapseActionView"
		android:actionViewClass="android.widget.SearchView"/>

	<!--
	-->
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="110"
        android:title="@string/title_profile"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_signout"
        android:orderInCategory="120"
        android:title="@string/title_signout"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="180"
        android:title="@string/title_settings"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="190"
        android:title="@string/title_about"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="200"
        android:title="@string/title_exit"
        android:showAsAction="never"/>

</menu>
