<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<TextView
		android:id="@+id/tv_about_title"
		android:paddingLeft="10dp"
    	android:text="@string/app_name"
		android:textSize="@dimen/text_size_16"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="6dip" />
		
	<TextView
		android:id="@+id/tv_about_version"
		android:paddingLeft="10dp"
    	android:text="@string/app_version"
		android:textSize="@dimen/text_size_14"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0dip" />
		
	<TextView
		android:id="@+id/tv_about_pubdate"
		android:paddingLeft="10dp"
    	android:text="@string/txt_about_pubdate"
		android:textSize="@dimen/text_size_12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="6dip" />
		
	<TextView
		android:id="@+id/tv_about_author"
		android:paddingLeft="10dp"
    	android:text="@string/txt_about_author"
		android:textSize="@dimen/text_size_12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0dip" />
		
	<TextView
		android:id="@+id/tv_about_email"
		android:paddingLeft="10dp"
    	android:text="@string/txt_about_email"
		android:textSize="@dimen/text_size_12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0dip" />
		
	<TextView
		android:id="@+id/tv_about_source"
		android:paddingLeft="10dp"
    	android:text="@string/txt_about_source"
		android:textSize="@dimen/text_size_12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="0dip" />
		
	<ScrollView
		android:id="@+id/sv_about_body"
		android:background="@drawable/listview_item_shape"
		android:layout_width="fill_parent"
		android:layout_height="match_parent" >
		<TextView
			android:id="@+id/tv_about_body"
			android:background="@drawable/listview_item_shape"
			android:paddingLeft="10dp"
	     	android:textSize="@dimen/text_size_16"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="0dip" />
	</ScrollView>
		
</LinearLayout>
