<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/rg_evolution_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_evolution_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evolution_headline"
            android:layout_marginBottom="0dip" >
        </TextView>

        <TextView
            android:id="@+id/tv_evolution_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evolution_remark"
            android:layout_marginBottom="0dip" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rg_evolution_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_evolution_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableLeft="@drawable/ic_drawer"
            android:text="@string/evolution_btn_plan" />

        <Button
            android:id="@+id/btn_evolution_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_drawer"
            android:text="@string/evolution_btn_check" />

        <Spinner
            android:id="@+id/spn_evolution_aims"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_drawer"
            android:entries="@array/evolution_aims"
            android:prompt="@string/evolution_btn_aim" />

    </LinearLayout>
    <!--  -->

</RelativeLayout>