<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_meditation_footbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/rb_meditation_settings"
        style="@style/footbar_radio"
        android:layout_weight="1"
        android:text="@string/meditation_btn_settings" />

    <ImageView
        style="@style/footbar_cutline"
        android:src="@drawable/widget_bar_cut_off" />

    <RadioButton
        android:id="@+id/rb_meditation_do"
        style="@style/footbar_radio"
        android:layout_weight="1"
        android:text="@string/meditation_btn_start"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_18" />

    <ImageView
        style="@style/footbar_cutline"
        android:src="@drawable/widget_bar_cut_off" />

    <RadioButton
        android:id="@+id/rb_meditation_check"
        style="@style/footbar_radio"
        android:layout_weight="1"
        android:text="@string/meditation_btn_check" />

</LinearLayout>