<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <FrameLayout
        android:id="@+id/fl_book_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp" >

        <ListView
            android:id="@+id/lv_book_catalog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <ListView
            android:id="@+id/lv_book_bookmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >
        </ListView>

        <ListView
            android:id="@+id/lv_book_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >
        </ListView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_book_footbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
		android:gravity="center_vertical"
		android:background="@drawable/widget_bar_bg_n">

        <RadioButton
            android:id="@+id/rb_book_catalog"
            style="@style/footbar_radio"
            android:text="@string/book_btn_catalog" />
		<ImageView
			style="@style/footbar_cutline"
			android:src="@drawable/widget_bar_cut_off"/>

        <RadioButton
            android:id="@+id/rb_book_bookmark"
            style="@style/footbar_radio"
            android:text="@string/book_btn_bookmark" />
		<ImageView
			style="@style/footbar_cutline"
			android:src="@drawable/widget_bar_cut_off"/>

        <RadioButton
            android:id="@+id/rb_book_comments"
            style="@style/footbar_radio"
            android:text="@string/book_btn_comments" />
    </LinearLayout>

</RelativeLayout>