<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_page"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/ll_book_volume_detail_footbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bar_bg_n"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_book_volume_detail_textsize_default"
            style="@style/footbar_radio"
            android:text="@string/book_btn_textsize_default" />

        <ImageView
            style="@style/footbar_cutline"
            android:src="@drawable/bar_cut_off" />

        <RadioButton
            android:id="@+id/rb_book_volume_detail_textsize_smaller"
            style="@style/footbar_radio"
            android:text="@string/book_btn_textsize_smaller" />

        <ImageView
            style="@style/footbar_cutline"
            android:src="@drawable/bar_cut_off" />

        <RadioButton
            android:id="@+id/rb_book_volume_detail_textsize_greater"
            style="@style/footbar_radio"
            android:text="@string/book_btn_textsize_greater" />
			
		<!--
        <ImageView
            style="@style/footbar_cutline"
            android:src="@drawable/bar_cut_off" />

        <ImageView
            android:id="@+id/iv_book_volume_detail_prev_screen"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:src="@drawable/left" />
			
        <ImageView
            style="@style/footbar_cutline"
            android:src="@drawable/bar_cut_off" />

        <ImageView
            android:id="@+id/iv_book_volume_detail_next_screen"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
			android:src="@drawable/right" />
		-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_book_volume_detail_headbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_book_volume_detail_footbar"
        android:orientation="vertical" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:orientation="vertical" >

			<TextView
				android:id="@+id/tv_book_volume_detail_head_booktitle"
				android:background="@drawable/listview_item_shape"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/listitem_black"
				android:textSize="@dimen/text_size_22"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/tv_book_volume_detail_head_title"
				android:background="@drawable/listview_item_shape"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/listitem_black"
				android:textSize="@dimen/text_size_22"
				android:textStyle="bold" />
		</LinearLayout>
		
		<ScrollView
			android:id="@+id/sv_book_volume_detail_content"
			android:background="@drawable/listview_item_shape"
			android:layout_margin="2dp"
			android:paddingLeft="2dp"
			android:layout_width="fill_parent"
			android:layout_height="match_parent" >

			<TextView
				android:id="@+id/tv_book_volume_detail_content"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/listitem_black"
				android:textSize="@dimen/text_size_22"
				android:textStyle="bold" />
		</ScrollView>
    </LinearLayout>
	
</RelativeLayout>